syntax = "proto3";

option java_package="com.trrp.trrp3server";
option go_package="pb";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

service Calculator {
    rpc Calculate(CalculateMessage) returns (CalculatedMessage) {}
}

message CalculateMessage {
    string Operation = 1;
    double Operand1 = 2;
    double Operand2 = 3;
}

message CalculatedMessage {
    double result = 1;
    google.protobuf.Timestamp calculationDate = 2;
    double calculationTime = 3;
    string calculationStatus = 4;
}

enum CalculationStatus {
    OK = 0;
    FAILED = 1;
}

enum Operation {
    MUL = 0;
    DIV = 1;
    SUB = 2;
    SUM = 3;
}